hphp/hack/test/typecheck/trait_private_bad4.php.exp
WARN: File "trait_private_bad4.php", line 24, characters 21-23:
Static method call on a trait: `MyTrait::foo` (Warn[12020])
  File "trait_private_bad4.php", line 12, characters 7-13:
  `MyTrait` is defined here
ERROR: File "trait_private_bad4.php", line 24, characters 21-23:
You cannot access protected members using the trait's name (did you mean to use static:: or self::?) (Typing[4112])
  File "trait_private_bad4.php", line 13, characters 29-31:
  This member is protected
